--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,42 +1,61 @@
-build:
-  needs: test
-  # Run on a ubuntu-22.04 VM image
-  runs-on: ubuntu-22.04
-  permissions:
-   packages: write
-   contents: write
-  name: Build cicd-lab
-  env:
-    VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
-    GITHUB_USER: cajoho99
-    IMAGE_REGISTRY: ghcr.io/cajoho99
-  steps:
-    # Checkout our repository
-    - uses: actions/checkout@v4
+name: Build that boi
 
-    # Setup Docker with BuildKit (faster builds and cache support)
-    - uses: docker/setup-buildx-action@v3
+on:
+  # When to run the pipeline
+  push:
+    branches:
+      - main
+jobs:
+  test:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    # Login to our container registry at ghcr.io/YOUR_USER with our credentials
-    - name: Login to registry
-      uses: docker/login-action@v3
-      with:
-        registry: "${{ env.IMAGE_REGISTRY }}"
-        username: "${{ github.actor }}"
-        password: "${{ github.token }}"
+      - name: Install dependencies
+        run: npm ci
 
-    # Some environment variables to not have to retype the same thing all the time.
-    - name: Set environment variables
-      run: |
-        # Use a sha as version
-        echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Run unit tests
+        run: npm run test
+  build:
+    needs: test
+    # Run on a ubuntu-22.04 VM image
+    runs-on: ubuntu-22.04
+    permissions:
+     packages: write
+     contents: write
+    name: Build cicd-lab
+    env:
+      VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+      GITHUB_USER: cajoho99
+      IMAGE_REGISTRY: ghcr.io/cajoho99
+    steps:
+      # Checkout our repository
+      - uses: actions/checkout@v4
 
-    # Build and push our container image
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        # Name our container image ghcr.io/YOUR_USER/lab-cicd:latest and something similar to ghcr.io/YOUR_USER/lab-cicd:f296f4d
-        tags: "${{ env.IMAGE_REGISTRY }}/lab-cicd:${{ env.SHA_SHORT }},${{ env.IMAGE_REGISTRY }}/lab-cicd:latest"
-        build-args: |
-         VITE_API_BASE_URL="${{ env.VITE_API_BASE_URL }}"
+      # Setup Docker with BuildKit (faster builds and cache support)
+      - uses: docker/setup-buildx-action@v3
+
+      # Login to our container registry at ghcr.io/YOUR_USER with our credentials
+      - name: Login to registry
+        uses: docker/login-action@v3
+        with:
+          registry: "${{ env.IMAGE_REGISTRY }}"
+          username: "${{ github.actor }}"
+          password: "${{ github.token }}"
+
+      # Some environment variables to not have to retype the same thing all the time.
+      - name: Set environment variables
+        run: |
+          # Use a sha as version
+          echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+      # Build and push our container image
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          # Name our container image ghcr.io/YOUR_USER/lab-cicd:latest and something similar to ghcr.io/YOUR_USER/lab-cicd:f296f4d
+          tags: "${{ env.IMAGE_REGISTRY }}/lab-cicd:${{ env.SHA_SHORT }},${{ env.IMAGE_REGISTRY }}/lab-cicd:latest"
+          build-args: |
+           VITE_API_BASE_URL="${{ env.VITE_API_BASE_URL }}"
