--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -4,11 +4,11 @@ features:
 ingress:
   rules:
     - component:
-        name: cajoho99-lab-cicd
+        name: lab-cicd
       match:
         path:
           prefix: /
-name: cajoho99-cicd-app
+name: cicd-app
 region: ams
 services:
   - health_check:
@@ -21,4 +21,4 @@ services:
       tag: latest
     instance_count: 1
     instance_size_slug: apps-s-1vcpu-0.5gb
-    name: cajoho99-lab-cicd
+    name: lab-cicd
